add to LFS (II)

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,59 @@
 crates/algorithms/tests/cases/**/* binary=true linguist-generated=true
+crates/algorithms/tests/cases/shortest_path/max_dense_long_00.in filter=lfs diff=lfs merge=lfs -text
+crates/algorithms/tests/cases/shortest_path/max_sparse_random_00.in filter=lfs diff=lfs merge=lfs -text
+crates/algorithms/tests/cases/shortest_path/sparse_random_02.out filter=lfs diff=lfs merge=lfs -text
+crates/algorithms/tests/cases/shortest_path/almost_line_00.out filter=lfs diff=lfs merge=lfs -text
+crates/algorithms/tests/cases/shortest_path/almost_line_01.out filter=lfs diff=lfs merge=lfs -text
+crates/algorithms/tests/cases/shortest_path/small_00.out filter=lfs diff=lfs merge=lfs -text
+crates/algorithms/tests/cases/shortest_path/line_00.in filter=lfs diff=lfs merge=lfs -text
+crates/algorithms/tests/cases/shortest_path/max_sparse_random_01.out filter=lfs diff=lfs merge=lfs -text
+crates/algorithms/tests/cases/shortest_path/small_03.in filter=lfs diff=lfs merge=lfs -text
+crates/algorithms/tests/cases/shortest_path/small_01.out filter=lfs diff=lfs merge=lfs -text
+crates/algorithms/tests/cases/shortest_path/small_03.out filter=lfs diff=lfs merge=lfs -text
+crates/algorithms/tests/cases/shortest_path/spfa_killer_00.in filter=lfs diff=lfs merge=lfs -text
+crates/algorithms/tests/cases/shortest_path/example_01.in filter=lfs diff=lfs merge=lfs -text
+crates/algorithms/tests/cases/shortest_path/grid_swirl_00.in filter=lfs diff=lfs merge=lfs -text
+crates/algorithms/tests/cases/shortest_path/max_star_00.in filter=lfs diff=lfs merge=lfs -text
+crates/algorithms/tests/cases/shortest_path/wrong_dijkstra_killer_00.out filter=lfs diff=lfs merge=lfs -text
+crates/algorithms/tests/cases/shortest_path/wrong_dijkstra_killer_01.in filter=lfs diff=lfs merge=lfs -text
+crates/algorithms/tests/cases/shortest_path/max_dense_random_01.in filter=lfs diff=lfs merge=lfs -text
+crates/algorithms/tests/cases/shortest_path/max_sparse_random_02.in filter=lfs diff=lfs merge=lfs -text
+crates/algorithms/tests/cases/shortest_path/small_04.in filter=lfs diff=lfs merge=lfs -text
+crates/algorithms/tests/cases/shortest_path/example_00.in filter=lfs diff=lfs merge=lfs -text
+crates/algorithms/tests/cases/shortest_path/max_dense_random_00.out filter=lfs diff=lfs merge=lfs -text
+crates/algorithms/tests/cases/shortest_path/sparse_random_00.out filter=lfs diff=lfs merge=lfs -text
+crates/algorithms/tests/cases/shortest_path/max_dense_long_00.out filter=lfs diff=lfs merge=lfs -text
+crates/algorithms/tests/cases/shortest_path/small_04.out filter=lfs diff=lfs merge=lfs -text
+crates/algorithms/tests/cases/shortest_path/sparse_random_00.in filter=lfs diff=lfs merge=lfs -text
+crates/algorithms/tests/cases/shortest_path/spfa_killer_00.out filter=lfs diff=lfs merge=lfs -text
+crates/algorithms/tests/cases/shortest_path/almost_line_01.in filter=lfs diff=lfs merge=lfs -text
+crates/algorithms/tests/cases/shortest_path/small_00.in filter=lfs diff=lfs merge=lfs -text
+crates/algorithms/tests/cases/shortest_path/grid_random_00.out filter=lfs diff=lfs merge=lfs -text
+crates/algorithms/tests/cases/shortest_path/max_dense_zero_00.in filter=lfs diff=lfs merge=lfs -text
+crates/algorithms/tests/cases/shortest_path/example_01.out filter=lfs diff=lfs merge=lfs -text
+crates/algorithms/tests/cases/shortest_path/max_dense_random_00.in filter=lfs diff=lfs merge=lfs -text
+crates/algorithms/tests/cases/shortest_path/max_sparse_random_00.out filter=lfs diff=lfs merge=lfs -text
+crates/algorithms/tests/cases/shortest_path/max_sparse_random_02.out filter=lfs diff=lfs merge=lfs -text
+crates/algorithms/tests/cases/shortest_path/almost_line_02.in filter=lfs diff=lfs merge=lfs -text
+crates/algorithms/tests/cases/shortest_path/almost_line_02.out filter=lfs diff=lfs merge=lfs -text
+crates/algorithms/tests/cases/shortest_path/small_02.in filter=lfs diff=lfs merge=lfs -text
+crates/algorithms/tests/cases/shortest_path/sparse_random_01.out filter=lfs diff=lfs merge=lfs -text
+crates/algorithms/tests/cases/shortest_path/wrong_dijkstra_handmade_00.in filter=lfs diff=lfs merge=lfs -text
+crates/algorithms/tests/cases/shortest_path/line_00.out filter=lfs diff=lfs merge=lfs -text
+crates/algorithms/tests/cases/shortest_path/max_star_01.out filter=lfs diff=lfs merge=lfs -text
+crates/algorithms/tests/cases/shortest_path/small_01.in filter=lfs diff=lfs merge=lfs -text
+crates/algorithms/tests/cases/shortest_path/sparse_random_01.in filter=lfs diff=lfs merge=lfs -text
+crates/algorithms/tests/cases/shortest_path/sparse_random_02.in filter=lfs diff=lfs merge=lfs -text
+crates/algorithms/tests/cases/shortest_path/example_00.out filter=lfs diff=lfs merge=lfs -text
+crates/algorithms/tests/cases/shortest_path/grid_random_00.in filter=lfs diff=lfs merge=lfs -text
+crates/algorithms/tests/cases/shortest_path/small_02.out filter=lfs diff=lfs merge=lfs -text
+crates/algorithms/tests/cases/shortest_path/wrong_dijkstra_killer_01.out filter=lfs diff=lfs merge=lfs -text
+crates/algorithms/tests/cases/shortest_path/almost_line_00.in filter=lfs diff=lfs merge=lfs -text
+crates/algorithms/tests/cases/shortest_path/max_dense_random_01.out filter=lfs diff=lfs merge=lfs -text
+crates/algorithms/tests/cases/shortest_path/max_sparse_random_01.in filter=lfs diff=lfs merge=lfs -text
+crates/algorithms/tests/cases/shortest_path/max_star_00.out filter=lfs diff=lfs merge=lfs -text
+crates/algorithms/tests/cases/shortest_path/max_star_01.in filter=lfs diff=lfs merge=lfs -text
+crates/algorithms/tests/cases/shortest_path/wrong_dijkstra_handmade_00.out filter=lfs diff=lfs merge=lfs -text
+crates/algorithms/tests/cases/shortest_path/grid_swirl_00.out filter=lfs diff=lfs merge=lfs -text
+crates/algorithms/tests/cases/shortest_path/max_dense_zero_00.out filter=lfs diff=lfs merge=lfs -text
+crates/algorithms/tests/cases/shortest_path/wrong_dijkstra_killer_00.in filter=lfs diff=lfs merge=lfs -text
