--- a/crates/algorithms/tests/cases/shortest_path/example_00.in
+++ b/crates/algorithms/tests/cases/shortest_path/example_00.in
@@ -1,8 +1,3 @@
-5 7 2 3
-0 3 5
-0 4 3
-2 4 2
-4 3 10
-4 0 7
-2 1 5
-1 0 1
+version https://git-lfs.github.com/spec/v1
+oid sha256:0868d99aa063f973bc47eb5747fd8873936754f9ab8bf295eaaf930946bed156
+size 51
