--- a/crates/dino/Cargo.toml
+++ b/crates/dino/Cargo.toml
@@ -16,3 +16,4 @@ either = "1.9.0" # TODO: potentially remove
 roaring = "0.10.2"
 fnv = { version = "1.0.7", default-features = false }
 hashbrown = { workspace = true, features = ['ahash'] }
+bitvec = "1.0.1"
