--- a/crates/dino/Cargo.toml
+++ b/crates/dino/Cargo.toml
@@ -14,6 +14,7 @@ either = "1.9.0" # TODO: potentially remove
 
 # Closures
 roaring = "0.10.2"
+croaring = "1.0.1"
 fnv = { version = "1.0.7", default-features = false }
 hashbrown = { workspace = true, features = ['ahash'] }
 bitvec = "1.0.1"
