feat(dino): remove unused dependencies

--- a/crates/dino/Cargo.toml
+++ b/crates/dino/Cargo.toml
@@ -13,8 +13,7 @@ error-stack.workspace = true
 either = "1.9.0" # TODO: potentially remove
 
 # Closures
-roaring = "0.10.2"
-croaring = "1.0.1"
-fnv = { version = "1.0.7", default-features = false }
-hashbrown = { workspace = true, features = ['ahash'] }
 bitvec = "1.0.1"
+
+[dev-dependencies]
+hashbrown = { workspace = true, features = ['ahash'] }
