--- a/crates/graphmap/Cargo.toml
+++ b/crates/graphmap/Cargo.toml
@@ -5,24 +5,10 @@ edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 [dependencies]
-fixedbitset.workspace = true
-funty.workspace = true
-indexmap.workspace = true
-petgraph-core = { workspace = true, features = ["alloc", "indexmap"] }
-petgraph-graph = { workspace = true, optional = true }
-serde = { workspace = true, optional = true, default-features = false, features = ["alloc"] }
-petgraph-proptest = { workspace = true, default-features = false, optional = true }
-proptest = { workspace = true, default-features = false, optional = true }
-fxhash = "0.2.1"
+petgraph-core = { workspace = true }
+petgraph-dino = { workspace = true }
 
-[dev-dependencies]
-serde = { version = "1.0.130", features = ["derive"] }
-serde-value = "0.7.0"
-insta = { version = "1.29.0", features = ['serde', 'json'] }
+error-stack = { workspace = true }
+hashbrown = "0.14.3"
 
 [features]
-convert = ["petgraph-graph"]
-default = ["std"]
-serde = ["dep:serde", "convert", "petgraph-graph?/serde"]
-std = ["petgraph-core/std", "indexmap/std", "serde?/std"]
-proptest = ["dep:proptest", "dep:petgraph-proptest"]
