--- a/Cargo.toml
+++ b/Cargo.toml
@@ -39,7 +39,7 @@ petgraph = { path = "." }
 petgraph-core = { path = "crates/core", default-features = false }
 petgraph-graph = { path = "crates/graph", default-features = false }
 petgraph-adjacency-matrix = { path = "crates/adjacency-matrix", default-features = false }
-petgraph-graphmap = { path = "crates/graphmap", default-features = false }
+petgraph-entry = { path = "crates/entry", default-features = false }
 petgraph-csr = { path = "crates/csr", default-features = false }
 petgraph-matrix-graph = { path = "crates/matrix-graph", default-features = false }
 petgraph-algorithms = { path = "crates/algorithms", default-features = false }
@@ -61,19 +61,18 @@ petgraph-algorithms = { workspace = true, default-features = false, features = [
 petgraph-generators = { workspace = true, default-features = false, optional = true }
 petgraph-io = { workspace = true, default-features = false, optional = true }
 
-[dependencies.petgraph-graphmap]
+[dependencies.petgraph-entry]
 workspace = true
-features = ["convert"]
 optional = true
 default-features = false
 
 [features]
 adjacency-matrix = ["dep:petgraph-adjacency-matrix", "petgraph-algorithms/remove-me-only-intended-for-move-adjacency-matrix"]
 csr = ["dep:petgraph-csr"]
-default = ["std", "graphmap", "stable-graph", "matrix-graph", "csr", "adjacency-matrix"]
-graphmap = ["dep:petgraph-graphmap"]
+default = ["std", "entry", "stable-graph", "matrix-graph", "csr", "adjacency-matrix"]
+entry = ["dep:petgraph-entry"]
 matrix-graph = ["dep:petgraph-matrix-graph"]
-serde = ["petgraph-graph/serde", "petgraph-graphmap?/serde"]
+serde = ["petgraph-graph/serde"]
 stable-graph = ["petgraph-graph/stable"]
 io = ["petgraph-io"]
 unstable-generators = ["petgraph-generators"]
@@ -81,11 +80,10 @@ std = [
     "petgraph-core/std",
     "petgraph-graph/std",
     "petgraph-adjacency-matrix?/std",
-    "petgraph-graphmap?/std",
     "petgraph-csr?/std",
     "petgraph-io?/std"
 ]
-proptest = ["petgraph-graph/proptest", "petgraph-graphmap?/proptest"]
+proptest = ["petgraph-graph/proptest"]
 
 [lib]
 bench = false
