--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -131,5 +131,13 @@ jobs:
 
       - name: Run tests
         run: just coverage --lcov --output-path lcov.info
+  typos:
+      name: "Spell check"
+      runs-on: ubuntu-latest
+      steps:
+        - uses: actions/checkout@v3
+        - uses: crate-ci/typos@master
+          with:
+            files: .
 
 # TODO: use a tool like codecov to upload the coverage report
