--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,13 +1,10 @@
 [package]
 
 name = "petgraph"
-version = "0.6.4"
+version = "0.6.5"
 readme = "README.md"
 license = "MIT OR Apache-2.0"
-authors = [
-"bluss",
-"mitchmindtree",
-]
+authors = ["bluss", "mitchmindtree"]
 
 description = "Graph data structure library. Provides graph types and graph algorithms."
 documentation = "https://docs.rs/petgraph/"
@@ -57,7 +54,14 @@ fxhash = "0.2.1"
 rayon = ["dep:rayon", "indexmap/rayon"]
 
 # feature flags for testing use only
-all = ["unstable", "quickcheck", "matrix_graph", "stable_graph", "graphmap", "rayon"]
+all = [
+    "unstable",
+    "quickcheck",
+    "matrix_graph",
+    "stable_graph",
+    "graphmap",
+    "rayon",
+]
 default = ["graphmap", "stable_graph", "matrix_graph"]
 
 generate = [] # For unstable features
