--- a/Cargo.toml
+++ b/Cargo.toml
@@ -48,6 +48,8 @@ quickcheck = { optional = true, version = "0.8", default-features = false }
 serde = { version = "1.0", default-features = false, optional = true }
 serde_derive = { version = "1.0", default-features = false, optional = true }
 rayon = { version = "1.5.3", optional = true }
+dot-parser = { version = "0.2", optional = true}
+dot-parser-macros = { version = "0.2", optional = true }
 
 [dev-dependencies]
 bincode = "1.3.3"
@@ -60,6 +62,7 @@ fxhash = "0.2.1"
 
 [features]
 rayon = ["std", "dep:rayon", "indexmap/rayon"]
+dot_parser = ["dep:dot-parser", "dep:dot-parser-macros"]
 
 # feature flags for testing use only
 all = [
@@ -69,6 +72,7 @@ all = [
     "stable_graph",
     "graphmap",
     "rayon",
+    "dot_parser",
 ]
 default = ["std", "graphmap", "stable_graph", "matrix_graph"]
 
