--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -48,6 +48,7 @@ jobs:
         run: |
           cargo generate-lockfile
           cargo update -p hashbrown --precise 0.15.0
+          cargo update -p once_cell --precise 1.20.3
 
       - name: Build with no features
         run: cargo build --verbose --no-default-features
