--- a/.github/workflows/semver-checks.yml
+++ b/.github/workflows/semver-checks.yml
@@ -4,6 +4,11 @@ on:
     pull_request_target:
         branches:
             - master
+        types:
+            - opened
+            - edited
+            - synchronize
+            - reopened
     workflow_dispatch:
         inputs:
             base:
