--- a/Cargo.toml
+++ b/Cargo.toml
@@ -48,8 +48,8 @@ quickcheck = { optional = true, version = "0.8", default-features = false }
 serde = { version = "1.0", default-features = false, optional = true }
 serde_derive = { version = "1.0", default-features = false, optional = true }
 rayon = { version = "1.5.3", optional = true }
-dot-parser = { version = "0.3", optional = true}
-dot-parser-macros = { version = "0.3", optional = true }
+dot-parser = { version = "0.4.1", optional = true}
+dot-parser-macros = { version = "0.4.1", optional = true }
 
 [dev-dependencies]
 bincode = "1.3.3"
@@ -62,7 +62,7 @@ fxhash = "0.2.1"
 
 [features]
 rayon = ["std", "dep:rayon", "indexmap/rayon"]
-dot_parser = ["dep:dot-parser", "dep:dot-parser-macros"]
+dot_parser = ["std", "dep:dot-parser", "dep:dot-parser-macros"]
 
 # feature flags for testing use only
 all = [
