--- a/.github/workflows/release-plz.yml
+++ b/.github/workflows/release-plz.yml
@@ -34,9 +34,16 @@ jobs:
           CARGO_REGISTRY_TOKEN: ${{ secrets.CARGO_REGISTRY_TOKEN }}
 
   # Create a PR with the new versions and changelog, preparing the next release.
+  #
+  # Note: When using the default `secrets.GITHUB_TOKEN` provided by GitHub Actions, the created PR
+  # will not trigger CI checks due to a limitation on recursive workflows.
+  # We could use a personal access token (PAT) instead, but we should create a bot account for that
+  # (otherwise PRs will be created in whoever's account provided the token).
   release-plz-pr:
     name: Generate release PR
     runs-on: ubuntu-latest
+    # Disabled for now.
+    if: false
     permissions:
       contents: write
       pull-requests: write
