Use nextest for running miri

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -122,3 +122,7 @@ jobs:
           components: miri
       # Exclude the `b07_vienna_test` test, as it takes very long to run with miri
       - run: cargo miri test -- --skip b07_vienna_test
+      #       - uses: taiki-e/install-action@v2
+      #        with:
+      #          tool: nextest
+      #      - run: cargo miri nextest test
