Add dependency list for 'quickcheck' feature

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -48,7 +48,7 @@ quickcheck = { optional = true, version = "0.8", default-features = false }
 serde = { version = "1.0", default-features = false, optional = true }
 serde_derive = { version = "1.0", default-features = false, optional = true }
 rayon = { version = "1.5.3", optional = true }
-dot-parser = { version = "0.5.1", optional = true}
+dot-parser = { version = "0.5.1", optional = true }
 dot-parser-macros = { version = "0.5.1", optional = true }
 
 [dev-dependencies]
@@ -80,6 +80,7 @@ generate = [] # For unstable features
 
 graphmap = []
 matrix_graph = []
+quickcheck = ["std", "dep:quickcheck", "graphmap", "stable_graph"]
 serde-1 = ["serde", "serde_derive"]
 stable_graph = ["serde?/alloc"]
 unstable = ["generate"]
