--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -110,9 +110,10 @@ jobs:
       - name: Check
         run: cargo check --no-default-features -p petgraph --target wasm32v1-none --features graphmap,serde-1,stable_graph,matrix_graph,generate,unstable
 
-  miri:
-    name: Unsoundness check
-    if: github.event_name != 'merge_group'
+  fast-miri:
+    # This job runs on pull_request without the `run-extra-tests` label.
+    name: Unsoundness check fast
+    if: ${{ github.event_name != 'merge_group' && github.event_name == 'pull_request' && !contains(github.event.pull_request.labels.*.name, 'run-extra-tests') }}
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -120,9 +121,21 @@ jobs:
       - uses: dtolnay/rust-toolchain@nightly
         with:
           components: miri
-      # Exclude the `b07_vienna_test` test, as it takes very long to run with miri
-      - run: cargo miri test -- --skip b07_vienna_test
-      #       - uses: taiki-e/install-action@v2
-      #        with:
-      #          tool: nextest
-      #      - run: cargo miri nextest test
+      - uses: taiki-e/install-action@v2
+        with:
+          tool: nextest
+      # Exclude some tests from fast-miri, as they take very long to run. thorough-miri includes all tests without nextest.
+      - run: cargo miri nextest run -- --skip b01_vienna_test --skip b07_vienna_test --skip generic_graph6_encoder_test_cases --skip graph6_for_csr_test_cases --skip graph6_for_graph_map_test_cases --skip graph6_for_graph_test_cases --skip graph6_for_matrix_graph_test_case --skip graph6_for_stable_graph_test_cases
+
+  thorough-miri:
+    # This job runs on push and pull_request with the `run-extra-tests` label.
+    name: Unsoundness check thorough
+    if: ${{ github.event_name != 'merge_group' && (github.event_name == 'push' || (github.event_name == 'pull_request' && contains(github.event.pull_request.labels.*.name, 'run-extra-tests'))) }}
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: mozilla-actions/sccache-action@v0.0.8
+      - uses: dtolnay/rust-toolchain@nightly
+        with:
+          components: miri
+      - run: cargo miri test
