--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -111,9 +111,9 @@ jobs:
         run: cargo check --no-default-features -p petgraph --target wasm32v1-none --features graphmap,serde-1,stable_graph,matrix_graph,generate,unstable
 
   fast-miri:
-    # This job runs on pull_request without the `run-extra-tests` label.
+    # This job runs on pull_request without the `S-run-thorough-tests` label.
     name: Unsoundness check fast
-    if: ${{ github.event_name != 'merge_group' && github.event_name == 'pull_request' && !contains(github.event.pull_request.labels.*.name, 'run-extra-tests') }}
+    if: ${{ github.event_name != 'merge_group' && github.event_name == 'pull_request' && !contains(github.event.pull_request.labels.*.name, 'S-run-thorough-tests') }}
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -128,9 +128,9 @@ jobs:
       - run: cargo miri nextest run -- --skip b01_vienna_test --skip b07_vienna_test --skip generic_graph6_encoder_test_cases --skip graph6_for_csr_test_cases --skip graph6_for_graph_map_test_cases --skip graph6_for_graph_test_cases --skip graph6_for_matrix_graph_test_case --skip graph6_for_stable_graph_test_cases
 
   thorough-miri:
-    # This job runs on push and pull_request with the `run-extra-tests` label.
+    # This job runs on push and pull_request with the `S-run-thorough-tests` label.
     name: Unsoundness check thorough
-    if: ${{ github.event_name != 'merge_group' && (github.event_name == 'push' || (github.event_name == 'pull_request' && contains(github.event.pull_request.labels.*.name, 'run-extra-tests'))) }}
+    if: ${{ github.event_name != 'merge_group' && (github.event_name == 'push' || (github.event_name == 'pull_request' && contains(github.event.pull_request.labels.*.name, 'S-run-thorough-tests'))) }}
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
