--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -113,7 +113,7 @@ jobs:
   fast-miri:
     # This job runs on pull_request without the `S-run-thorough-ci-tests` label.
     name: Unsoundness check fast
-    if: ${{ github.event_name != 'merge_group' && github.event_name == 'pull_request' && !contains(github.event.pull_request.labels.*.name, 'S-run-thorough-ci-tests') }}
+    if: ${{ github.event_name == 'pull_request' && !contains(github.event.pull_request.labels.*.name, 'S-run-thorough-ci-tests') }}
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
