--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,7 +23,7 @@ features = ["rayon", "serde-1", "quickcheck"]
 no-dev-version = true
 
 [workspace.package]
-rust-version = "1.64"
+rust-version = "1.66"
 edition = "2021"
 authors = ["bluss", "mitchmindtree"]
 
@@ -44,7 +44,8 @@ debug = true
 fixedbitset = { version = "0.5.7", default-features = false }
 indexmap = { version = "2.5.0", default-features = false }
 hashbrown = { version = "^0.15.0", default-features = false, features = ["default-hasher", "inline-more"] }
-quickcheck = { optional = true, version = "0.8", default-features = false }
+proptest = { version = "1.3.1", default-features = false, optional = true }
+quickcheck = { version = "0.8", default-features = false, optional = true }
 serde = { version = "1.0", default-features = false, optional = true }
 serde_derive = { version = "1.0", default-features = false, optional = true }
 rayon = { version = "1.5.3", optional = true }
@@ -74,7 +75,7 @@ all = [
     "rayon",
     "dot_parser",
 ]
-default = ["std", "graphmap", "stable_graph", "matrix_graph"]
+default = ["std", "graphmap", "stable_graph", "matrix_graph", "proptest"]
 
 generate = [] # For unstable features
 
@@ -85,7 +86,7 @@ serde-1 = ["serde", "serde_derive"]
 stable_graph = ["serde?/alloc"]
 unstable = ["generate"]
 
-std = ["indexmap/std"]
+std = ["indexmap/std", "proptest?/std"]
 
 [lints.clippy]
 alloc_instead_of_core = "warn"
