feat: init core

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,6 @@
 [workspace]
-members = ["crates/petgraph", "serialization-tests"]
+members = ["crates/core","crates/petgraph", "serialization-tests"]
+resolver = "3"
 
 [workspace.package]
 authors = [
