feat: first traits

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -58,3 +58,4 @@ self_named_module_files = "warn"
 alloc_instead_of_core = "warn"
 std_instead_of_alloc  = "warn"
 std_instead_of_core   = "warn"
+min_ident_chars = "warn"
