ci: Fix forgotten install of cargo hack

--- a/.github/workflows/merge-check.yml
+++ b/.github/workflows/merge-check.yml
@@ -34,6 +34,10 @@ jobs:
         uses: taiki-e/install-action@v2
         with:
           tool: cargo-nextest
+      - name: Install cargo-hack
+        uses: taiki-e/install-action@v2
+        with:
+          tool: cargo-hack
 
       - name: Build and test
         run: |
