ci: Try updating semver-checks action

--- a/.github/workflows/semver-checks.yml
+++ b/.github/workflows/semver-checks.yml
@@ -41,42 +41,26 @@ jobs:
       - name: Install stable toolchain
         uses: dtolnay/rust-toolchain@stable
 
-      # Install a prebuilt binary of cargo-semver-checks
-      - uses: cargo-bins/cargo-binstall@main
-      - name: Install cargo-semver-checks
-        run: cargo binstall -y cargo-semver-checks
-
-      # Abort if the crate has build errors, without posting/deleting the comment.
-      - name: Check for build errors
-        id: build
-        run: |
-            cd PR_BRANCH
-            cargo check
-
       # Run cargo-semver-checks against the PR's target branch.
-      - name: Check for public API changes
+      - name: Check semver
         id: check-changes
+        uses: obi1kenobi/cargo-semver-checks-action@v2
+        with:
+          manifest-path: PR_BRANCH/Cargo.toml
+          baseline-rev: ${{ github.event.pull_request.base.sha || github.event.inputs.base }}
+          release-type: minor
+        continue-on-error: true
+      
+      - name: Set breaking flag
+        id: set-breaking
         run: |
-          # Don't fail the workflow when semver-checks returns a non-zero exit code.
-          set +e
-
-          cd PR_BRANCH
-          cargo semver-checks --color never --baseline-root ../BASELINE_BRANCH --release-type minor > diagnostic.txt
-          if [ "$?" -ne 0 ]; then
+          if [ "${{ steps.check-changes.outcome }}" == "failure" ]; then
             echo "breaking=true" >> $GITHUB_OUTPUT
+            echo "semver_checks_diagnostic=${{ steps.check-changes.outputs.semver-checks-output }}" >> $GITHUB_OUTPUT
           else
             echo "breaking=false" >> $GITHUB_OUTPUT
+            echo "semver_checks_diagnostic=${{ steps.check-changes.outputs.semver-checks-output }}" >> $GITHUB_OUTPUT
           fi
-
-          {
-            echo 'semver_checks_diagnostic<<EOF'
-            cat diagnostic.txt
-            echo
-            echo EOF
-          } >> $GITHUB_OUTPUT
-
-          echo "semver-checks diagnostic:\n"
-          cat diagnostic.txt
       
       # Check if the PR title contains a breaking change flag in its title,
       # according to the conventional commits specification.
@@ -97,12 +81,12 @@ jobs:
 
       # Debug step
       - run: |
-          echo "breaking: ${{ steps.check-changes.outputs.breaking }}"
+          echo "breaking: ${{ steps.set-breaking.outputs.breaking }}"
           echo "breaking-pr: ${{ steps.breaking-pr.outputs.breaking }}"
 
       # Post a diagnostics comment if there are breaking changes and the PR has been marked as breaking.
       - name: Post a comment about the breaking changes. PR marked as breaking.
-        if: ${{ (github.event_name == 'pull_request' || github.event_name == 'pull_request_target') && steps.check-changes.outputs.breaking == 'true' && steps.breaking-pr.outputs.breaking == 'true' }}
+        if: ${{ (github.event_name == 'pull_request' || github.event_name == 'pull_request_target') && steps.set-breaking.outputs.breaking == 'true' && steps.breaking-pr.outputs.breaking == 'true' }}
         uses: marocchino/sticky-pull-request-comment@v2
         with:
           header: rs-semver-checks
@@ -113,7 +97,7 @@ jobs:
               <summary>cargo-semver-checks summary</summary>
               
               ```
-              ${{ steps.check-changes.outputs.semver_checks_diagnostic }}
+              ${{ steps.set-breaking.outputs.semver_checks_diagnostic }}
               ```
               
             </details>
@@ -121,7 +105,7 @@ jobs:
 
       # Post a help comment if there are breaking changes, and the PR hasn't been marked as breaking.
       - name: Post a comment about the breaking changes. PR *not* marked as breaking.
-        if: ${{ (github.event_name == 'pull_request' || github.event_name == 'pull_request_target') && steps.check-changes.outputs.breaking == 'true' && steps.breaking-pr.outputs.breaking == 'false' }}
+        if: ${{ (github.event_name == 'pull_request' || github.event_name == 'pull_request_target') && steps.set-breaking.outputs.breaking == 'true' && steps.breaking-pr.outputs.breaking == 'false' }}
         uses: marocchino/sticky-pull-request-comment@v2
         with:
           header: rs-semver-checks
@@ -133,20 +117,20 @@ jobs:
               <summary>cargo-semver-checks summary</summary>
               
               ```
-              ${{ steps.check-changes.outputs.semver_checks_diagnostic }}
+              ${{ steps.set-breaking.outputs.semver_checks_diagnostic }}
               ```
               
             </details>
           GITHUB_TOKEN: ${{ env.GITHUB_TOKEN }}
       - name: Fail if there are undeclared breaking changes
-        if: ${{ steps.check-changes.outputs.breaking == 'true' && steps.breaking-pr.outputs.breaking == 'false' }}
+        if: ${{ steps.set-breaking.outputs.breaking == 'true' && steps.breaking-pr.outputs.breaking == 'false' }}
         run: exit 1
 
       # Delete previous comments when the issues have been resolved
       # This step doesn't run if any of the previous checks fails.
       - name: Delete previous comments
         uses: marocchino/sticky-pull-request-comment@v2
-        if: ${{ (github.event_name == 'pull_request' || github.event_name == 'pull_request_target') && steps.check-changes.outputs.breaking == 'false' }}
+        if: ${{ (github.event_name == 'pull_request' || github.event_name == 'pull_request_target') && steps.set-breaking.outputs.breaking == 'false' }}
         with:
           header: rs-semver-checks
           delete: true
