ci: Make sure stable toolchain is used in cargo-semver check

--- a/.github/workflows/semver-checks.yml
+++ b/.github/workflows/semver-checks.yml
@@ -16,11 +16,6 @@ on:
                 required: true
                 default: 'master'
 
-env:
-  CARGO_TERM_COLOR: always
-  SCCACHE_GHA_ENABLED: "true"
-  RUSTC_WRAPPER: "sccache"
-
 jobs:
   semver-checks:
     name: semver-checks 🦀
@@ -32,20 +27,25 @@ jobs:
         with:
           ref: ${{ github.event.pull_request.head.sha || github.ref }}
           path: PR_BRANCH
+      # Remove repo toolchain pin so we can specify toolchain manually
+      - name: Remove toolchain pin
+        run: rm -f rust-toolchain.toml rustup-toolchain.toml
       - name: Checkout baseline
         uses: actions/checkout@v4
         with:
           ref: ${{ github.event.pull_request.base.sha || github.event.inputs.base }}
           path: BASELINE_BRANCH
-      - uses: mozilla-actions/sccache-action@v0.0.8
       - name: Install stable toolchain
         uses: dtolnay/rust-toolchain@stable
+      - name: Build caching
+        uses: Swatinem/rust-cache@v2
 
       # Run cargo-semver-checks against the PR's target branch.
       - name: Check semver
         id: check-changes
         uses: obi1kenobi/cargo-semver-checks-action@v2
         with:
+          feature-group: all-features
           manifest-path: PR_BRANCH/Cargo.toml
           baseline-rev: ${{ github.event.pull_request.base.sha || github.event.inputs.base }}
           release-type: minor
