ci: Temp change of pull request triggers for testing

--- a/.github/workflows/semver-checks.yml
+++ b/.github/workflows/semver-checks.yml
@@ -1,6 +1,9 @@
 name: Rust semver-checks
 
 on:
+    pull_request:
+        branches:
+            - master
     pull_request_target:
         branches:
             - master
